recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:6: error: identifier expected but ')' found.
    droite(i.asInstanceOf[Double]*90.)
                                     ^FourSquare:14: error: identifier expected but ')' found.
    avance(100.)
               ^FourSquare:15: error: identifier expected but ')' found.
  	droite(90.)
                  ^